--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@nuxt/image": "^2.0.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6"
+    "bootstrap": "^5.3.8",
+    "postcss": "^8.5.6",
+    "sass": "^1.97.2",
+    "sass-loader": "^16.0.6"
   }
 }
