--- a/uploads.ini
+++ b/uploads.ini
@@ -1,11 +1,28 @@
 ; Custom PHP configuration for WordPress uploads
-; Increase upload limits for large images
+; Increase upload limits for large images and Duplicator Pro support
 
 file_uploads = On
-memory_limit = 256M
-upload_max_filesize = 64M
-post_max_size = 64M
-max_execution_time = 300
-max_input_time = 300
+memory_limit = 512M
+upload_max_filesize = 512M
+post_max_size = 512M
+max_execution_time = 600
+max_input_time = 600
 allow_url_fopen = On
 default_socket_timeout = 3600
+
+; Duplicator Pro requirements
+max_input_vars = 10000
+output_buffering = Off
+zlib.output_compression = Off
+
+; Enable required functions for Duplicator
+; Note: These are usually enabled by default but we ensure they are
+mysqli.allow_persistent = On
+
+; Session settings
+session.gc_maxlifetime = 3600
+
+; Error reporting for debugging
+display_errors = Off
+log_errors = On
+error_log = /var/log/php_errors.log
